<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan a Barcode</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>
    <string name="authors">Authors</string>
    <string name="description">Description</string>
    <string name="categories">Categories</string>

    <string name="save_button">Save</string>
    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>
    <string name="share_url" translatable="false">https://www.googleapis.com/books/v1/volumes?</string>
    <string name="or">or</string>

    <string name="message_not_connected">Oops.. Looks like you don\'t have an active internet connection.</string>
    <string name="message_book_is_already_saved">This book is already in your saved list</string>
    <string name="message_book_successfully_saved">Saved the book</string>

    <string name="scanner_prompt">Scan an ISBN barcode</string>
    <string name="scanner_cancelled">Scan cancelled</string>
    <string name="scanned_ean">Scanned barcode %1$s</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>

    <string name="google_api_url" translatable="false">https://www.googleapis.com/books/v1/volumes?</string>
</resources>
