<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/eancontainer"
            style="@style/section"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:minEms="@integer/ean_width"
                android:saveEnabled="true" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textAllCaps="true"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/scan_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorAccent"
                    android:padding="16dp"
                    android:text="@string/scan_button"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/foundBookContainer"
            style="@style/card"
            android:visibility="invisible"
            tools:visibility="visible"
            >
            <LinearLayout
                style="@style/section"
                android:orientation="horizontal">

            <ImageView
                android:id="@+id/bookCover"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="@string/book_cover"
                tools:src="@drawable/hp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                >
                <TextView
                android:id="@+id/bookTitle"
                style="@style/book_title"
                tools:text="Harry Potter and the Prisoner of Azkaban" />
                <TextView
                    android:id="@+id/bookSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_fontsize"
                    android:layout_marginBottom="16dp"
                    tools:text="Harry Potter book 3" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        style="@style/book_detail"
                        android:text="@string/authors"
                        />
                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textSize="@dimen/small_fontsize"
                        tools:text="J.K. Rowling" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        style="@style/book_detail"
                        android:text="@string/categories"
                        />
                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_fontsize"

                        tools:text="fantasy" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/delete_button"
            style="@style/button_light"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_cancel_black_48dp"
            android:drawableStart="@drawable/ic_cancel_black_48dp"
            android:drawablePadding="16dp"
            android:gravity="center"
            android:text="@string/cancel_button"
            android:visibility="invisible"
            tools:visibility="visible"
            />

        <Button
            android:id="@+id/save_button"
            style="@style/button_light"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_check_black_48dp"
            android:drawableEnd="@drawable/ic_check_black_48dp"
            android:drawablePadding="16dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/save_button"
            android:visibility="invisible"
            tools:visibility="visible"
            />
    </LinearLayout>
</RelativeLayout>
