<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.jaschke.alexandria.AddBook">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:orientation="vertical">

            <LinearLayout
                style="@style/card"
                android:padding="16dp">

                <TextView
                    android:id="@+id/fullBookTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/textPrimary"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/head_line"
                    android:textStyle="bold"
                    tools:text="Harry Potter and the Prisoner of Azxaban" />


            </LinearLayout>

            <LinearLayout
                style="@style/card"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/fullBookCover"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/book_cover"
                    tools:src="@drawable/hp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fullBookSubTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="5"
                        android:textSize="18sp"
                        tools:text="Harry Potter book 3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/book_detail"
                            android:text="@string/categories" />

                        <TextView
                            android:id="@+id/categories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="fantasy" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/book_detail"
                            android:text="@string/authors" />

                        <TextView
                            android:id="@+id/authors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="J.K. Rowling" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/card"
                android:orientation="vertical">

                <TextView
                    style="@style/book_detail"
                    android:layout_marginBottom="16dp"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/fullBookDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ellipsize="end"
                    android:gravity="start"
                    tools:text="Description" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/delete_button"
        style="@style/button_light"
        android:layout_gravity="end"
        android:drawableEnd="@drawable/ic_action_discard"
        android:drawableRight="@drawable/ic_action_discard"
        android:paddingEnd="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingStart="16dp"
        android:text="@string/delete" />

</LinearLayout>
